# churn-risk-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: request.json
reports/: calibration.md  comparison.md  drift.md  eval_baseline.md
src/churn_risk_service/: __init__.py  api.py  baseline.py  calibration.py  compare.py  data.py  features.py  model.py  monitoring.py  schemas.py  service.py  train.py
tests/: test_api.py  test_baseline.py  test_calibration.py  test_data.py  test_features.py  test_model.py  test_monitoring.py
